package ch.hslu.cas.msed.blobfish.base;

import java.util.List;

public record PathEvaluation(List<String> move, double eval) {
}
