package ch.hslu.cas.msed.blobfish.base;

public enum PlayerColor {
    BLACK,
    WHITE
}
