package ch.hslu.cas.msed.blobfish.base.pieces;

public interface Piece {

    int getPoint();

    Character getUIRepresent();

    Character getFENRepresent();
}
