@startuml

class ch.hslu.cas.msed.blobfish.base.BoardTransformationUtil {
	{method}  {static} +flipFileIndex ( paramint1 : int ) : int
	{method}  {static} +flipRankIndex ( paramint1 : int ) : int
	{method}  {static} +rotateBoardIndex ( paramint1 : int ) : int
}


abstract class ch.hslu.cas.msed.blobfish.base.BotAlgorithm {
	{field} -calculationDepth : int
	{method}  {abstract} +getBestPath ( paramChessBoard1 : ch.hslu.cas.msed.blobfish.base.ChessBoard ) : ch.hslu.cas.msed.blobfish.base.PathEvaluation
}


class ch.hslu.cas.msed.blobfish.base.ChessBoard {
	{field} {static} -STARTPOSITION_FEN : String
	{field} -board : com.github.bhlangonijr.chesslib.Board
	{method} +boardToArray () : [Lch.hslu.cas.msed.blobfish.base.Piece;
	{method} +doMove ( paramString1 : String ) : ch.hslu.cas.msed.blobfish.base.ChessBoard
	{method} +getFen () : String
	{method} +getSideToMove () : ch.hslu.cas.msed.blobfish.base.PlayerColor
	{method} +isCapture ( paramMove1 : com.github.bhlangonijr.chesslib.move.Move ) : boolean
	{method} +isEndGame () : boolean
	{method} +isGameOver () : boolean
	{method} +isMated () : boolean
	{method} +isMoveLegal ( paramString1 : String ) : boolean
	{method} +legalMoves () : java.util.List
}


interface ch.hslu.cas.msed.blobfish.base.EvaluationStrategy {
	{method}  {abstract} +getEvaluation ( paramChessBoard1 : ch.hslu.cas.msed.blobfish.base.ChessBoard ) : int
}


class ch.hslu.cas.msed.blobfish.base.FenUtil {
	{method}  {static} +getFenPositionBlocks ( paramString1 : String ) : [Ljava.lang.String;
	{method}  {static} +validateFenString ( paramString1 : String ) : void
}


class ch.hslu.cas.msed.blobfish.base.PathEvaluation {
	{field} -eval : double
	{field} -move : java.util.List
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +eval () : double
	{method} +hashCode () : int
	{method} +move () : java.util.List
	{method} +toString () : String
}


class ch.hslu.cas.msed.blobfish.base.Piece {
	{method} +color () : ch.hslu.cas.msed.blobfish.base.PlayerColor
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +fen () : Character
	{method} +hashCode () : int
	{method} +materialPoints () : int
	{method} +toString () : String
	{method} +type () : ch.hslu.cas.msed.blobfish.base.PieceType
}


enum ch.hslu.cas.msed.blobfish.base.PieceType {
	{field} +BISHOP
	{field} +KING
	{field} +KNIGHT
	{field} +PAWN
	{field} +QUEEN
	{field} +ROOK
}


enum ch.hslu.cas.msed.blobfish.base.PlayerColor {
	{field} +BLACK
	{field} +WHITE
}


class ch.hslu.cas.msed.blobfish.base.ThreadLocalUtils {
	{method}  {static} +resetStaticThreadLocal ( paramClass1 : Class , paramString2 : String ) : void
}


class ch.hslu.cas.msed.blobfish.base.exception.InvalidMoveException {
	{field} -originalMove : String
}




ch.hslu.cas.msed.blobfish.base.BotAlgorithm *--  ch.hslu.cas.msed.blobfish.base.EvaluationStrategy : evaluationStrategy
ch.hslu.cas.msed.blobfish.base.BotAlgorithm *--  ch.hslu.cas.msed.blobfish.base.PlayerColor : ownPlayerColor
ch.hslu.cas.msed.blobfish.base.Piece *--  ch.hslu.cas.msed.blobfish.base.PieceType : type
ch.hslu.cas.msed.blobfish.base.Piece *--  ch.hslu.cas.msed.blobfish.base.PlayerColor : color


@enduml